# tensile

./: .clang-format  .gitignore  AUTHORS  Doxyfile  Makefile.am  Makefile.generic  README.md  check.h  common.am  common.texi  compiler.h  configure.ac  doc_check.sh  docextract.sed  docsymbols.sh  grammar.y  lexeme.l  mktests.m4  selftest.c  setup.sh  status.c  status.h  tensile.l  tensile.y  tensilec.c  testing.h  utils.h
compiler/: Makefile.am  grammar.y  lexeme.l  tensilec.c
lib/: COPYING  Makefile.am  charset.c  charset.h  compiler.h  dstring.c  dstring.h  edits.c  edits.h  libtn.texi  libtn_charset_tests.t  libtn_unit_tests.t  libtn_utils_tests.t  libtn_values_tests.t  ranges.h  refs.h  sequence.h  stamp-vti  status.c  status.h  storage.c  storage.h  testing.c  testing.h  utils.c  utils.h  values.c  values.h  xdr.c  xdr.h
lib/tests/: Makefile.am  libtn_charset_tests.c  libtn_charset_tests.t  libtn_edits_tests.c  libtn_edits_tests.t  libtn_ranges_tests.c  libtn_ranges_tests.t  libtn_refs_tests.c  libtn_refs_tests.t  libtn_sanity_tests.c  libtn_storage_tests.c  libtn_utils_tests.c  libtn_utils_tests.t  libtn_values_tests.t
licenses/: LGPL3  MIT
scripts/: add-header.sh  add-license.sh
setup/: gcc.mk
