AX_IS_RELEASE([never])
AC_INIT([tensile], [0.1])
AC_PREREQ([2.69])
AM_INIT_AUTOMAKE

AX_CHECK_ENABLE_DEBUG()

AC_PROG_CC_C99

AX_COMPILER_FLAGS()

AX_GCC_FUNC_ATTRIBUTE([malloc])
AX_GCC_FUNC_ATTRIBUTE([nonnull])
AX_GCC_FUNC_ATTRIBUTE([returns_nonnull])
AX_GCC_FUNC_ATTRIBUTE([warn_unused_result])
AX_GCC_FUNC_ATTRIBUTE([sentinel])
AX_GCC_FUNC_ATTRIBUTE([alloc_size])
AX_GCC_FUNC_ATTRIBUTE([format])
AX_GCC_FUNC_ATTRIBUTE([format_arg])
AX_GCC_FUNC_ATTRIBUTE([pure])
AX_GCC_FUNC_ATTRIBUTE([const])
AX_GCC_FUNC_ATTRIBUTE([weak])
AX_GCC_FUNC_ATTRIBUTE([visibility])
AX_GCC_FUNC_ATTRIBUTE([deprecated])
AX_GCC_FUNC_ATTRIBUTE([unused])
AX_GCC_FUNC_ATTRIBUTE([used])
AX_GCC_FUNC_ATTRIBUTE([constructor])
AX_GCC_FUNC_ATTRIBUTE([destructor])
AX_GCC_FUNC_ATTRIBUTE([dllexport])
AX_GCC_FUNC_ATTRIBUTE([dllimport])
AX_GCC_FUNC_ATTRIBUTE([noreturn])

AX_GCC_VAR_ATTRIBUTE([unused])

AC_C_RESTRICT

AC_CONFIG_FILES([Makefile])
AC_CONFIG_HEADERS([tn_config.h])
AC_OUTPUT
